# Edge_Detection_Methods

./: Assignment_Head_direction_network.ipynb  CMakeLists.txt  README.md  Readme.txt  Unsupervised_Learning_Assignment.ipynb  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
EdgeDetection/: EdgeDetection.pro  canny.cpp  canny.cpp.rfLKKo  deriche.cpp  deriche.h  images.qrc  laplacian.cpp  laplacian.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  prewitt.cpp  prewitt.h  sobel.cpp  sobel.h
header_files/: canny.h  deriche.h  laplacian.h  prewitt.h  processing_methods.h  sobel.h
source_files/: canny.cpp  deriche.cpp  laplacian.cpp  prewitt.cpp  processing_methods.cpp  sobel.cpp
